* Mon Jul 28 2014 Martin Kolman <martin.kolman@gmail.com> - 0.48.1
- added persistent overlay configuration support in Qt 5 GUI
- aproximate batch download size is now displayed during batch download in GTK GUI
- location debuging support in Qt 5 GUI
- fixed zoom level not being saved in Qt 5 GUI
- fixed current track logging settings not being displayed properly in GTK GUI
- fixed URL for the Map1.eu map layer
* Tue Jun 17 2014 Martin Kolman <martin.kolman@gmail.com> - 0.47.3
- move bundled modules to the bundle directory
 - this should make unbundling on platfors that have the modules (Fedora, etc.) easier
- remove some more bundled modules from the Sailfish OS package
* Tue Jun 17 2014 Martin Kolman <martin.kolman@gmail.com> - 0.47.2
- add local search support to the Qt 5 GUI
- sort local search results by initial distance in Qt 5 GUI
- show search results on the map in Qt 5 GUI
- highlight the result that was selected in result list in red on map in Qt 5 GUI
* Sun Jun 08 2014 Martin Kolman <martin.kolman@gmail.com> - 0.47.1
- the QtQuick GUI now downloads new tiles asynchronously
 - much faster asynchronous tile loading !
 - no more synchronous tile download stalls !
 - no more GUI freezes when starting modRana without connectivity !
 - tiles currently on the screen have a diwnload priority (LiFo download queue)
 - if the queue is full, old download requests that are probably no longer visible are dropped
 - proper tile download error hanling & retry support
 - proper tile download feedback
 - tile handling debug support
- fix tiles stuck on "Downloading"/"Loading" in GTK GUI
- fix weird tile loading artifacts in overlay mode in the GTK GUI
- remove all Cloudmade layers as they were discontinue in the first half of May
- change Sailfish OS profile folder name to harbour-modrana and migrate all data to the new folders
 - this is fully automatic and no user interaction is needed
 - this makes modRana Harbour compliant in regards to profile paths