@@ -1,6 +1,1 @@
-- added persistent overlay configuration support in Qt 5 GUI
-- aproximate batch download size is now displayed during batch download in GTK GUI
-- location debuging support in Qt 5 GUI
-- fixed zoom level not being saved in Qt 5 GUI
-- fixed current track logging settings not being displayed properly in GTK GUI
-- fixed URL for the Map1.eu map layer
+- add a missing module to the Sailfish OS package
