@@ -17,7 +17,7 @@ modules/mod_route/monav_amd64
 modules/mod_route/monav_i386
 # backported modules not needed on Python 3.4
 # (they are already part of the standard library)
-core/backports
+#core/backports
 # bundled modules not needed on Sailfish OS
 # as they are already available by default
 # or not needed by the Qt 5 GUI
